<resources>
    <string name="app_name">Geo Attendance</string>

    <!-- General Title -->
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="title_checked_in">Checked In</string>
    <string name="title_checked_out">Checked Out</string>
    <string name="title_warning">Warning!</string>
    <string name="title_master_location">Master Location</string>
    <string name="title_greeting">Hai, %s</string>
    <string name="subtitle_greeting">Welcome to the Geo Attendance application! Let\'s track your presence and make every moment count.</string>

    <!-- Onboarding -->
    <string name="title_first_time_setup">First Time Setup</string>
    <string name="subtitle_first_time_setup">Please provide your name to continue using the Geo Attendance app.</string>

    <!-- Home -->
    <string name="text_style_date">📅 %s</string>
    <string name="text_style_time">🕓 %s</string>

    <!-- Dialog -->
    <string name="dialog_confirm_update_master_location">Are you sure to update master location?</string>

    <!-- Button -->
    <string name="btn_submit">Submit</string>
    <string name="btn_positive">Yes</string>
    <string name="btn_negative">No</string>
    <string name="btn_check_in">Check In</string>
    <string name="btn_check_out">Check Out</string>

    <!-- Hint/Label -->
    <string name="hint_username">Username</string>
    <string name="label_master_location">Select Master Location</string>
    <string name="label_move_closer_1">You\'re almost there! Just a little closer</string>
    <string name="label_move_closer_2">Try to move closer to the master location!</string>
    <string name="label_move_closer_3">To far from the master location!</string>

    <!-- Error -->
    <string name="error_check_in">Check in error!</string>
    <string name="error_check_out">Check out error!</string>
    <string name="error_failed_get_location">Failed to get location</string>

    <!-- Placeholder -->
    <string name="placeholder_date">Mon - 25 Mar 2024</string>
    <string name="placeholder_time">9:00 AM</string>
    <string name="placeholder_distance">10 m</string>
    <string name="desc_empty_history">Empty History Icon</string>
    <string name="placeholder_empty_history">There\'s no attendance history yet!</string>
</resources>